manual address and figures update to be able to handle with latex2html

--- a/doc/cfield.tex
+++ b/doc/cfield.tex
@@ -13,7 +13,7 @@ the crystal field parameters and
  {\prg chrgplt\index{chrgplt}} to plot the charge density, see section \ref{addprog}.
 
 \begin{figure}[hb]
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/crystalfieldplot.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/crystalfieldplot.eps}
 \caption{\label{chrgpla}
 The crystal field model: the figure shows the influence of two positive 
 charges on the charge density of 4f-electrons. The
@@ -25,7 +25,7 @@ rare earth ions.}
 \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/chrgpla.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/chrgpla.eps}
 \caption{\label{chrgplb}
 Calculated charge density of 4f-electrons in an orthorhombic crystal field. In
 this example the charge density of a Nd$^{3+}$ ion at a temperature of 10~K was 
@@ -846,7 +846,7 @@ spectrum
 press the save button, it creates a file {\prg display.jpg} which is shown in figure~\ref{spectrum}.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[angle=0,width=1.0\textwidth]{./figsrc/10KCEFspectrum.eps}
+\includegraphics[angle=0,width=1.0\textwidth]{figsrc/10KCEFspectrum.eps}
 \caption{\label{spectrum}
 Calculated crystal field neutron spectrum of NdCu$_2$ at a temperature of 10~K.
 Horizontal axis is energy transfer in meV and vertical axis is neutron intensity
@@ -862,7 +862,7 @@ numbers denote the field range (0-30 Tesla) and the temperature (10~K). The resu
 to {\prg moment.rtplot}, fig.~\ref{moment} shows the result.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/moment.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/moment.eps}
 \caption{\label{moment}
 Calculated magnetic moment for field applied along $x$ direction ($c$ axis, note the
 notation of the crystal field $xyz$ axes with respect to the crystal lattice is
@@ -888,7 +888,7 @@ Other quantities can be calculated using the options: -s  (calculate entropy  (J
 Fig.~\ref{cpndcu2} shows an example.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/cpall.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/cpall.eps}
 \caption{\label{cpndcu2}
 Calculated specific heat of NdCu$_2$ in zero magnetic field as calculated
 by {\prg cpso1ion} (crystal field contribution) in comparison with experimental
