--- a/doc/fitting.tex
+++ b/doc/fitting.tex
@@ -30,7 +30,7 @@ As an example we refer to the fitting of the magnetic
 excitations of CeCu$_2$ in {\prg mcphas/examples/cecu2a/fit}. 
 
 \begin{figure}[hb]\label{safit}
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/simannfit.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/simannfit.eps}
 \caption{Layout of the fitting modules.}
 \end{figure}
 
@@ -93,7 +93,7 @@ uses the parameter {\em par2a} specified at another place of the input file.
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.8\textwidth]{./figsrc/searchspace.eps}
+\includegraphics[angle=0, width=0.8\textwidth]{figsrc/searchspace.eps}
 \end{center}\label{searchspace}
 \caption{Coverage of a two-dimensional parameter space by program {\prg searchspace\index{searchspace}}}
 \end{figure}
