--- a/doc/graphic_display.tex
+++ b/doc/graphic_display.tex
@@ -66,7 +66,7 @@ of NdCu$_2$
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.7\textwidth]{../examples/ndcu2b/resultss/mag0_2T.ps}
+\includegraphics[angle=-90, width=0.7\textwidth]{figsrc/ndcu2b/resultss/mag0_2T.ps}
 \end{center}
 \caption{Calculated temperature dependence of the magnetisation  along the crystallographic
 $b$-direction  of NdCu$_2$ for an applied magnetic field of 0.2~T 
@@ -124,7 +124,7 @@ power point
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.5\textwidth]{../examples/ndcu2b/resultss/spinsab.eps}
+\includegraphics[angle=0, width=0.5\textwidth]{figsrc/ndcu2b/resultss/spinsab.eps}
 \end{center}
 \caption{Calculated Spin-Structure of NdCu$_2$ at $T=$~2~K and $H=0$.
 [plot created by program {\prg spinsab.eps}]}
@@ -219,7 +219,7 @@ program
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.7\textwidth]{../examples/ndcu2b/resultss/chargesab.eps}
+\includegraphics[angle=0, width=0.7\textwidth]{figsrc/ndcu2b/resultss/chargesab.eps}
 \end{center}
 \caption{Calculated 4f Charge-Structure of NdCu$_2$ at $T=$~2~K and $H=0$.
 [plot created by program {\prg charges+javaview}]}
@@ -302,7 +302,7 @@ on the different harmonics of NdCu$_2$.
 
 \begin{figure}[htb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.8\textwidth]{../examples/ndcu2b/resultss/hkl.ps}
+\includegraphics[angle=-90, width=0.8\textwidth]{figsrc/ndcu2b/resultss/hkl.ps}
 \end{center}
 \caption{NdCu$_2$: calculated temperature dependence of magnetic amplitudes of the
 main propagation vector and higher harmonics (at zero magnetic field).}
@@ -351,7 +351,7 @@ produced by {\prg phased}.
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.5\textwidth]{../examples/ndcu2b/resultss/phased.ps}
+\includegraphics[angle=-90, width=0.5\textwidth]{figsrc/ndcu2b/resultss/phased.ps}
 \end{center}
 \caption{Calculated magnetic phase diagram of NdCu$_2$ for field parallel to the orthorhombic $b$-direction.}
 \label{phasediagramgraphic}
