--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -32,7 +32,9 @@
 
 \author{M. Rotter, Lucian G Pascut, Till Hoffmann \\
 University of Oxford, Physics Department, Clarendon Laboratory, Parks Road, Oxford, UK\\
-E-mail: martin.rotter@physics.ox.ac.uk\\
+Max Planck Institute for Chemical Physics of Solids,N\"othnitzer Str. 40, 01187 Dresden, 
+Germany \\
+E-mail: martin.rotter@cpfs.mpg.de\\
 \\
  M. Doerr\\
 Institut f\"ur Festk\"orperhysik, Technische Universit\"at Dresden, D-01062 Dresden, Germany\\
@@ -141,7 +143,7 @@ tasks of these different modules of the program package.
 
 
 \begin{figure}[hb]\begin{center}
-\includegraphics[angle=0,width=0.7\columnwidth]{./figsrc/mcphas_modules.eps}
+\includegraphics[angle=0,width=0.7\columnwidth]{figsrc/mcphas_modules.eps}
 \caption{\label{modules}
 Structure of the program package showing the tasks of the different modules.}
 \end{center}
@@ -206,7 +208,7 @@ algorithm~\cite{kirkpatrick83-671} and described in section~\ref{simannfit}.
 \end{description}
 
 \begin{figure}[ht]\begin{center}
-\includegraphics[angle=90,width=0.7\columnwidth]{./figsrc/ndphased.ps}
+\includegraphics[angle=90,width=0.7\columnwidth]{figsrc/ndphased.ps}
 \caption{\label{ndphased}
 Magnetic phase diagram for NdCu$_2$ for magnetic field along
 the orthorhombic $b$-direction. Colours represent the calculated phase
