--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -284,7 +284,7 @@ the scattering angle values and the parameters U,V and W (as in {\prg FullProf\i
 \end{itemize}
 
 \begin{figure}[ht]
-\includegraphics[angle=0,width=1.1\textwidth]{./figsrc/patternAF1.eps}
+\includegraphics[angle=0,width=1.1\textwidth]{figsrc/patternAF1.eps}
 \caption{\label{elnpattern}
 Calculated magnetic neutron powder diffraction pattern
 of NdCu$_2$~\cite{gratz91-9297} at T=2~K.
