--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -341,14 +341,14 @@ and stores the result in {\prg ./results/mcdisp.dsigma}.
 
 %\begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 %\begin{center}\leavevmode
-%\includegraphics[angle=-90, width=0.8\textwidth]{../examples/ndcu2b/resultss/compF3.ps}
+%\includegraphics[angle=-90, width=0.8\textwidth]{figsrc/ndcu2b/resultss/compF3.ps}
 %\end{center}
 %\caption{NdCu$_2$ Magnetic Excitations [meV] along ($h$00) in the phase %F3~\cite{rotter00-29}}
 %\end{figure}
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.6\textwidth]{./figsrc/dispF1.ps}
+\includegraphics[angle=0, width=0.6\textwidth]{figsrc/dispF1.ps}
 \end{center}
 \caption{\label{dispF1}NdCu$_2$ Magnetic Excitations [meV] along ($h$00) in the phase F1 in comparison to experimental %%@
 data~\cite{rotter02-751}.
@@ -357,7 +357,7 @@ data~\cite{rotter02-751}.
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-0, width=0.6\textwidth]{./figsrc/dispAF1.ps}
+\includegraphics[angle=-0, width=0.6\textwidth]{figsrc/dispAF1.ps}
 \end{center}
 \caption{NdCu$_2$ Magnetic Excitations [meV] along ($h$00) in the phase AF1 in comparison to experimental %%@
 data~\cite{rotter02-751}.
@@ -736,7 +736,7 @@ the excitation energies and eigenvector matrices $\mathcal T$ remain the same.
 
 \begin{figure}[ht]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-0, width=0.6\textwidth]{./figsrc/animationAF1.eps}
+\includegraphics[angle=-0, width=0.6\textwidth]{figsrc/animationAF1.eps}
 \end{center}
 \caption{\label{animationAF1}
 NdCu$_2$ - snapshot of animation of the mode at Q=(0.65 1 0) at energy 1.056~meV in phase AF1 at 
@@ -824,7 +824,7 @@ animation (on screen both chargedensities and spins will move).
 
 \begin{figure}[t]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-0, width=0.6\textwidth]{./figsrc/diffuse_ndcu2_10K.eps}
+\includegraphics[angle=-0, width=0.6\textwidth]{figsrc/diffuse_ndcu2_10K.eps}
 \end{center}
 \caption{\label{diffus}
 NdCu$_2$ - calculated diffuse magnetic scattering intensity in the (hk0) plane.
@@ -1088,7 +1088,7 @@ is stored in file {\prg mcdisp.qei}.
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.5\textwidth]{./figsrc/contour2K_070504.eps}
+\includegraphics[angle=0, width=0.5\textwidth]{figsrc/contour2K_070504.eps}
 \end{center}
 \caption{Magnetic Neutron powder spectrum of PrNi$_2$B$_2$C for $T=2$~K as calculated using module {\prg powdermagnons} %%@
 in combination with {\prg 
@@ -1097,7 +1097,7 @@ mcdisp}.}\label{prni2b2c_2K}
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.5\textwidth]{./figsrc/contour10K_070504.eps}
+\includegraphics[angle=0, width=0.5\textwidth]{figsrc/contour10K_070504.eps}
 \end{center}
 \caption{Magnetic Neutron powder spectrum of PrNi$_2$B$_2$C for $T=10$~K  as calculated using module {\prg %%@
 powdermagnons} in combination with {\prg 
