--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -192,7 +192,7 @@ Some options for the output of the calculation can be changed in this section.
 \end{description}
 
 \begin{figure}[hb]
-\includegraphics[angle=0,width=0.9\columnwidth]{./figsrc/fecalc.eps}
+\includegraphics[angle=0,width=0.9\columnwidth]{figsrc/fecalc.eps}
 \caption{\label{fecalc}Mean field process of sub {\prg fecalc}.}
 \end{figure}
 
@@ -460,7 +460,7 @@ curve(s).
 
 \begin{figure}[htb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.3\textwidth]{./figsrc/magnetization_ndcu2.ps}
+\includegraphics[angle=0, width=0.3\textwidth]{figsrc/magnetization_ndcu2.ps}
 \end{center}
 \caption{Calculated magnetisation of NdCu$_2$ for field parallel to the orthorhombic $b$-direction.}
 \label{magnetization}
@@ -468,7 +468,7 @@ curve(s).
 
 \begin{figure}[htb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.8\textwidth]{./figsrc/magnetostriction_ndcu2.eps}
+\includegraphics[angle=0, width=0.8\textwidth]{figsrc/magnetostriction_ndcu2.eps}
 \end{center}
 \caption{Calculated spontaneous magnetostriction of NdCu$_2$.}
 \label{magnetostrictiongraphic}
