--- a/doc/q_int.tex
+++ b/doc/q_int.tex
@@ -187,7 +187,7 @@ of the magnetic axis due to quadrupolar exchange has been calculated according t
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.5\textwidth]{./figsrc/dyphased.ps}
+\includegraphics[angle=-90, width=0.5\textwidth]{figsrc/dyphased.ps}
 \end{center}
 \caption{DyCu$_2$: calculated quadrupolar phased diagram. When applying a large magnetic field
 parallel to the $c$ axis of the orthorhombic crystal, the system undergoes a structural transformation
@@ -207,7 +207,7 @@ in figure~\ref{qintensity} for the case of PrCu$_2$.
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.6\textwidth]{./figsrc/orbiton.ps}
+\includegraphics[angle=0, width=0.6\textwidth]{figsrc/orbiton.ps}
 \end{center}
 \caption{Orbital excitations viewed  as correlated changes in 4f-charge densities.}
 \label{qmodes}
@@ -215,7 +215,7 @@ in figure~\ref{qintensity} for the case of PrCu$_2$.
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.5\textwidth]{./figsrc/prcu2_0k0_5T.eps}
+\includegraphics[angle=0, width=0.5\textwidth]{figsrc/prcu2_0k0_5T.eps}
 \end{center}
 \caption{PrCu$_2$: calculated dispersion of quadrupolar excitations in a field of 5 Tesla parallel to the $a$ axis %%@
 of this orthorhombic system.
