bug in dmcalc fo module so1ion corrected

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -72,8 +72,9 @@ community this program would not have come into existence.
 
 \section*{What is New ?}
 
-\subsection*{... in version 4.1 ...}
+\subsection*{... in version 4.1/4.2 ...}
 - a bug in the normalisation of the eigenvectors/intensities calculated for dispersive modes in mcdisp.c has been removed
+- a bug in the beyond dip approximation calculation for inelastic intensities with module so1ion has been removed
 
 \subsection*{... in version 4.0 ...}
 
